--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ footer {
     line-height: 30px;
     padding: 5px auto;
     text-align: center;
-    background-color: #f4f4f4;
+    background-color: #eee;
 }
 .logo {
     font-size: x-large;
@@ -55,7 +55,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
-    background-color: #f4f4f4;
+    background-color: #eee;
     padding: 10px 30px;
     text-transform: uppercase;
 }
@@ -179,7 +179,7 @@ footer {
 }
 
 .posts-list li {
-    border: 1px #e4e4e4 solid;
+    border: 1px #eee solid;
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
