--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
-    background-color: #eee;
+    background-color: #fcc;
     padding: 10px 30px;
     text-transform: uppercase;
 }
