--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
-    background-color: #fcc;
+    background-color: #eee;
     padding: 10px 30px;
     text-transform: uppercase;
 }
@@ -190,7 +190,7 @@ footer {
 }
 
 .post {
-    border: 1px solid #;
+    border: 1px solid #eee;
 }
 
 .error {
